fix: show scrollbar on chrome

--- a/assets/scss/components/notes_md.scss
+++ b/assets/scss/components/notes_md.scss
@@ -4,19 +4,7 @@
   }
   transition-duration: 100ms !important;
 }
-::-webkit-scrollbar {
-  height: 10px;
-}
 
-::-webkit-scrollbar-thumb {
-  background: rgba(90, 90, 90, 0.5);
-  border-radius: 15px !important;
-}
-
-::-webkit-scrollbar-track {
-  background: rgba(90, 90, 90, 0.1);
-  border-radius: 15px !important;
-}
 .title-content {
   margin-left: 10%;
 }
